# STREAM

./: .gitignore  CMakeLists.txt  Makefile  README  README.affinity  TO_DO  mysecond.c  stream.c  stream.f  test_qsort.c
.github/workflows/: cmake.yml
Development/: stream.c.5.10
Versions/: README  stream_5-10_posix_memalign.c  stream_d.c  stream_mpi.c  stream_mpi.f  stream_omp.c  stream_tuned.f
Versions/Old/: second_cpu.f  second_wall.c  stream_d.f  stream_wall.f
Versions/Old/1996-08-18/: stream_d.c  stream_d.f
Versions/Old/2003-04-08/: second_cpu.c
Versions/Old/Experimental/: do_offsets
